[tool.poetry]
name = "docker-launch"
version = "0.1.0"
description = "Create and launch docker images on multiple hosts."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/necst-telescope/docker-launch"
repository = "https://github.com/necst-telescope/docker-launch"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^4.4", python = "<3.8" }
numpy = "^1.19"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^3.8"
ipykernel = "^6.3"
jupyter = "^1.0"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^5.2"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

